tests/paczka1/fuzzy1/27418371.err
Error in line 2: 1IgcKP A28 19,0
Error in line 3: 1IgcKP A691 40,0
Error in line 10: cWipxM A250 1,5
Error in line 17: gkqeiZXfJ A691 55,8
Error in line 25: cWipxM A28 9,7
Error in line 29: n1eZ7A6l A181 38,2
